# Coursework

PCVC/: CMakeLists.txt  README.md
PCVC/cmake/: resources.cmake
PCVC/libs/glad/: CMakeLists.txt
PCVC/libs/lodepng/: CMakeLists.txt
PCVC/src/: main.cpp
PCVC/src/core/: plugindescriptor.h  pluginregister.h  renderplugin.cpp  renderplugin.h
PCVC/src/core/camera/: abstractcamera.h  orbitcamera.cpp  trackball.cpp  trackball.h
PCVC/src/core/util/: fileutil.cpp  fileutil.h  fpscounter.h  glutil.h
PCVC/src/plugins/PCVC/HelloCube/: HelloCube.h
PCVC/src/plugins/PCVC/HelloCube/resources/: cube.frag
PCVC/src/plugins/PCVC/Picking/: Objects.h
PCVC/src/plugins/PCVC/Picking/resources/shaders/: base.vert  cube.frag  cube.geom  quad.frag  sphere.frag  sphere.vert  torus.vert
PCVC/src/plugins/PCVC/SnowGlobe/: Objects.cpp
PCVC/src/plugins/PCVC/SnowGlobe/resources/shaders/: base.frag  base.vert  birds.frag  dome.frag  dome.vert  particleCPU.frag  particleCPU.vert  particleGPU.comp  particleGPU.vert  quad.frag  skybox.frag  sphere.frag  sphere.vert
PCVC/src/plugins/PCVC/SurfaceVis/: SurfaceVis.cpp
PCVC/src/plugins/PCVC/SurfaceVis/resources/models/: simple1.txt
PCVC/src/plugins/PCVC/SurfaceVis/resources/shaders/: box.frag  control-points.frag  quad.frag  quad.vert  surface.frag
PCVC/src/plugins/PCVC/VolumeVis/: VolumeVis.cpp
PCVC/src/plugins/PCVC/VolumeVis/resources/shaders/: background.frag  histo.geom  histo.vert  tf-view.frag  volume.frag
Pratical Course Visual Computing/libs/: CMakeExternals.cmake
Pratical Course Visual Computing/libs/glad/include/glad/: gl.h
Pratical Course Visual Computing/libs/imgui/: CMakeLists.txt
Pratical Course Visual Computing/libs/imguizmo/: CMakeLists.txt
Pratical Course Visual Computing/src/core/: core.cpp  core.h  input.h
Pratical Course Visual Computing/src/core/camera/: orbitcamera.h
Pratical Course Visual Computing/src/core/util/: fpscounter.cpp  glfwutil.h  imguiutil.h
Pratical Course Visual Computing/src/plugins/PCVC/HelloCube/: HelloCube.cpp
Pratical Course Visual Computing/src/plugins/PCVC/HelloCube/resources/: cube.vert
Pratical Course Visual Computing/src/plugins/PCVC/Picking/: Objects.cpp  Picking.cpp  Picking.h
Pratical Course Visual Computing/src/plugins/PCVC/Picking/resources/shaders/: base.frag  torus.frag
Pratical Course Visual Computing/src/plugins/PCVC/SnowGlobe/: Objects.h  SnowGlobe.cpp  SnowGlobe.h
Pratical Course Visual Computing/src/plugins/PCVC/SnowGlobe/resources/shaders/: particleGPU.frag  quad.vert  skybox.vert
Pratical Course Visual Computing/src/plugins/PCVC/SurfaceVis/: SurfaceVis.h
Pratical Course Visual Computing/src/plugins/PCVC/SurfaceVis/resources/models/: cup.txt  scuril2.txt  simple2.txt
Pratical Course Visual Computing/src/plugins/PCVC/SurfaceVis/resources/shaders/: box.vert  control-points.vert  surface.tesc  surface.tese  surface.vert
Pratical Course Visual Computing/src/plugins/PCVC/VolumeVis/: VolumeVis.h
Pratical Course Visual Computing/src/plugins/PCVC/VolumeVis/resources/shaders/: histo.frag  tf-lines.frag  tf-lines.vert
